fix profile spacing

--- a/css/profile.css
+++ b/css/profile.css
@@ -10,5 +10,8 @@
 }
 
 #profile-container {
+    display: flex;
+    flex-direction: column;
     margin: 20px;
+    gap: 20px;
 }
